# gears

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md
.github/workflows/: coverage.yml  create_release.yml  cross-compile.yml  main.yml  publish.yml
.run/: Fmt.run.xml
docs/: index.md
src/: component.rs  display_manager.rs  game_manager.rs  game_object.rs  gameobject.rs  log_manager.rs  main.rs  manager.rs  quaternion.rs  transform.rs  vector.rs  world_manager.rs
