[package]
name = "gears"
version = "0.1.0"
authors = ["Josh Finch <me@joshfinch.com>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
legion = "0.4.0"
bincode = "~1.3.1"
gfx-hal = "=0.6.0"
shaderc = "=0.6.2"
image = "~0.23.9"
serde = { version = "~1.0.115", features = ["derive"] }
winit = "~0.20.0"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.1"